--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "build": "vite build",
+    "preview": "vite preview",
+    "serve": "serve dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -103,6 +102,7 @@
     "drizzle-kit": "^0.30.4",
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
+    "serve": "^14.2.4",
     "tailwindcss": "^3.4.17",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.19.1",
